cluster/homelab/core/portainer/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: portainer
    namespace: portainer
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:25VhZg==,iv:91Bv4sJDfiLeNhBBNjts8mFqO9pORCbMg/03FIbKNQM=,tag:a3EhN4sxiEZqFyBwV5DHaA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:lO95ViT2vxosJVp2R9eT/AcdBRUmp01ZYLA8Zn0NIA==,iv:gSafcH9A3GHpFEogUJpbz5hNIZai893Zjmc+pbY25KE=,tag:NBRvK5cYwWq/N5+H9/3r8Q==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:pYpKbjbttudetg==,iv:MenEjskE3cVRG1SOXpyneYsTwim8JLhkdWOsJCnQhg0=,tag:bviJrf37WAokWRXRPxh5Iw==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:J4QvqygrwQcD,iv:pHbEUqp2sa2TixiFLz6oobexpaB+1DiNoiGF75C/jfw=,tag:l0s64doXHy8LN6rXMk/yFQ==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:mogkjP42dj4a,iv:eMKj1qezbrTVMjSHhPG0riSLiFQg8PQQqNAiGnlJ3B0=,tag:WL2gZopk+FKexe8qu1BkAA==,type:str]
        gethomepage.dev/namespace: ENC[AES256_GCM,data:EyADtu0Ww1kC,iv:cxNClUKBKXWkj1bJqNm6VYu+WBPVYsLhyTEW0d31J0c=,tag:imxOKFLNebQ7WcIOugYc3A==,type:str]
        gethomepage.dev/app: ENC[AES256_GCM,data:9+PS72FdgyVh,iv:RirU0IzCHqwuBxwXXMCSqpvNk/HqnIWxKn9mnivUmYw=,tag:BBCCZPXl5KTnKt5oyXjAHQ==,type:str]
        gethomepage.dev/href: ENC[AES256_GCM,data:IueFrClWnCnVyTYyfpoofvoG+Kc5PmrEBzeRIJLMeQpF9xk=,iv:dOlaX00RybLdupWgYYhMUyuyRSS2gAriaco2TdcmuMk=,tag:zkvNJFERh23oqVJ6af+9wA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1umudqfh963mmhgkgatylwh9jgez7qh4twpaqy3ea3nlcarhm09hq5er32r
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuZGR2eW5xWjJqUWg5aXN0
[...]
            p9xrjiTjXUFC+pzE5YFsXgeOslTFnieufL5sZztaKssKFyMduH0t+Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-03T09:27:08Z"
    mac: ENC[AES256_GCM,data:A6UzILJLIKEsxRCpu4mMYYstrj/Cl5TWDmwCiQZub4x5iC/qgkCoZNLyTbmHKWNIGT6rcRZnlMWuDWZuzhhRJiVoZtSxHP0PrLcsH6HmOif7jKbgPFZJKi2fUN0D01CxljjvszgDpxPzwgr2tg6SCQ5p1+tNYOCpek1Sc1TcVXk=,iv:dNU3OnQgrhk4szidJVxWarGTE0Qd6Lp77iDopNmW1iY=,tag:gMRi9gnel0oXexfUzTom4w==,type:str]
    pgp: []
    encrypted_regex: ^(rules|annotations|)$
    version: 3.9.0
